tests/ui/raw-ref-op/const-eval-compare-ice-105047.stderr
warning: function pointers and raw pointers not derived from integers in patterns behave unpredictably and should not be relied upon. See https://github.com/rust-lang/rust/issues/70861 for details.
  --> $DIR/const-eval-compare-ice-105047.rs:9:12
   |
LL |     if let RCZ = &raw const *&0 { }
   |            ^^^
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #120362 <https://github.com/rust-lang/rust/issues/120362>
   = note: `#[warn(pointer_structural_match)]` on by default

error: pointers cannot be reliably compared during const eval
  --> $DIR/const-eval-compare-ice-105047.rs:9:12
   |
LL |     if let RCZ = &raw const *&0 { }
   |            ^^^
   |
   = note: see issue #53020 <https://github.com/rust-lang/rust/issues/53020> for more information

error: aborting due to 1 previous error; 1 warning emitted

Future incompatibility report: Future breakage diagnostic:
warning: function pointers and raw pointers not derived from integers in patterns behave unpredictably and should not be relied upon. See https://github.com/rust-lang/rust/issues/70861 for details.
  --> $DIR/const-eval-compare-ice-105047.rs:9:12
   |
LL |     if let RCZ = &raw const *&0 { }
   |            ^^^
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #120362 <https://github.com/rust-lang/rust/issues/120362>
   = note: `#[warn(pointer_structural_match)]` on by default

